# gravitas

./: .gitignore  CONTRIBUTING.md  Cargo.toml
crates/gravitas-cli/: Cargo.toml
crates/gravitas-cli/src/: config.rs  main.rs
crates/gravitas-cli/src/output/: ascii.rs  mod.rs  table.rs
crates/gravitas-core/: Cargo.toml
crates/gravitas-core/src/: gex.rs  lib.rs  scenarios.rs  types.rs
crates/gravitas-fetch/: Cargo.toml
crates/gravitas-fetch/src/: lib.rs  mock.rs  source.rs  tradier.rs
crates/gravitas-fetch/src/futu/: client.rs  codec.rs  mod.rs  proto.rs
crates/gravitas-server/: Cargo.toml  Shuttle.toml
crates/gravitas-server/src/: main.rs  state.rs
crates/gravitas-server/src/routes/: gex.rs  mod.rs  options.rs
crates/gravitas-ui/: Cargo.toml  index.html
crates/gravitas-ui/src/: app.rs  fetch.rs  main.rs
