[package]
name = "gravitas-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gravitas"
path = "src/main.rs"

[dependencies]
gravitas-core = { path = "../gravitas-core" }
gravitas-fetch = { path = "../gravitas-fetch" }
clap = { version = "4.6", features = ["derive"] }
comfy-table = "7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs = "6"
chrono = { workspace = true }
