[package]
name = "gravitas-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
gravitas-core = { path = "../gravitas-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Futu OpenD protocol (optional)
prost = { version = "0.13", optional = true }
sha1 = { version = "0.10", features = ["std"], optional = true }

[features]
default = []
futu = ["dep:prost", "dep:sha1"]
