[package]
name = "gravitas-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gravitas-core = { path = "../gravitas-core" }
eframe = "0.34"
egui = "0.34"
egui_plot = "0.35"
gloo-net = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = "0.1"
